bugfix: heading alignment ie10/11

--- a/src/@koop-components/page-components/container/_container.scss
+++ b/src/@koop-components/page-components/container/_container.scss
@@ -1,4 +1,5 @@
 .container {
+  width: 70em;
   max-width: 70em;
   margin: 0 auto;
   padding: 0 1em;
